--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DJ School Management and Scheduling System</title> 
+    <title>MUSE INC Management and Scheduling System</title> 
   </head>
   <body>
-  <!--Made with Floot-->
     <div id="root"></div>  
     <script type="module" src="/index.tsx"></script>
   </body>
